@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PseudoTerminal.m,v 1.184 2003-05-30 01:05:16 ujwal Exp $
+// $Id: PseudoTerminal.m,v 1.185 2003-05-30 02:01:13 ujwal Exp $
 //
 /*
  **  PseudoTerminal.m
@@ -205,6 +205,9 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
     
     // Set the bell option
     [VT100Screen setPlayBellFlag: ![pref silenceBell]];
+
+    // Set the blinking cursor option
+    [[aSession SCREEN] setBlinkingCursor: [pref blinkingCursor]];
 
     // assign terminal and task objects
     [[aSession SCREEN] setTerminal:[aSession TERMINAL]];
